# lifterr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: validation.rs
src/: lib.rs  option.rs  result.rs
